WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190412
Crash when closing WKWebView during enter fullscreen animation
https://bugs.webkit.org/show_bug.cgi?id=190412
Summary
Crash when closing WKWebView during enter fullscreen animation
Jer Noble
Reported
2018-10-09 14:02:31 PDT
Crash when closing WKWebView during enter fullscreen animation
Attachments
Patch
(11.47 KB, patch)
2018-10-09 15:01 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2018-10-09 15:01:01 PDT
<
rdar://problem/45141948
>
Jer Noble
Comment 2
2018-10-09 15:01:39 PDT
Created
attachment 351918
[details]
Patch
Blaze Burg
Comment 3
2018-10-09 15:04:09 PDT
Comment on
attachment 351918
[details]
Patch r=mews
WebKit Commit Bot
Comment 4
2018-10-09 16:46:22 PDT
Comment on
attachment 351918
[details]
Patch Clearing flags on attachment: 351918 Committed
r236990
: <
https://trac.webkit.org/changeset/236990
>
WebKit Commit Bot
Comment 5
2018-10-09 16:46:24 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug