Crash when closing WKWebView during enter fullscreen animation https://bugs.webkit.org/show_bug.cgi?id=190412

Reviewed by Brian Burg.

Source/WebKit:

We need a valid _webView if, during -[NSWindow close], we catch a notification saying we failed to enter
fullscreen and try to replace the placeholder with the actual _webView.

* UIProcess/mac/WKFullScreenWindowController.mm:
(-[WKFullScreenWindowController close]):

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKitCocoa/CloseWebViewDuringEnterFullscreen.mm: Added.
(-[CloseWebViewDuringEnterFullscreenUIDelegate _webViewWillEnterFullscreen:]):
(-[CloseWebViewDuringEnterFullscreenUIDelegate _webViewWillExitFullscreen:]):
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/205371@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236990 268f45cc-cd09-0410-ab3c-d52691b4dbfc